--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PORTA=4000
-CONNECTION_STRING=Server=regulus.cotuca.unicamp.br;Database=BD23129;User Id=BD23129;Password=senha;TrustServerCertificate=True
+PORTA=8090
+CONNECTION_STRING=Server=regulus.cotuca.unicamp.br;Database=BD24133;User Id=BD24133;Password=BD24133;TrustServerCertificate=True
