--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.4 ## verificar versão mais recente ------------------------------
+  http: ^1.2.2 # para a conexão com a api
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
