--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^1.2.2 # para a conexão com a api
   google_fonts: ^6.1.0
+  shared_preferences: ^2.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
