--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^1.2.2 # para a conexão com a api
   google_fonts: ^6.1.0
   shared_preferences: ^2.3.2
+  fl_chart: ^0.66.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
