--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_fonts: ^6.1.0
   shared_preferences: ^2.3.2
   fl_chart: ^0.66.0
+  flutter_localizations:
+    sdk: flutter 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
